Barang tapi belom yang kompor, kasur, dkk

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ plugins {
 
 apply plugin: 'application'
 
-mainClassName = 'com.thesims.Main'
+mainClassName = 'com.thesims.Main'      // CLI
+// mainClassName = 'com.thesims.TheSims'   // GUI
 
 group 'com.thesims'
 // version '1.0-SNAPSHOT'
