--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ plugins {
 apply plugin: 'application'
 
 // Comment salah satu
-// mainClassName = 'com.simplicity.Main'      // No GUI
-mainClassName = 'com.simplicity.SimPlicity'   // GUI
+mainClassName = 'com.simplicity.Main'      // No GUI
+// mainClassName = 'com.simplicity.SimPlicity'   // GUI
 
 group 'com.simplicity'
 // version '1.0-SNAPSHOT'
