--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation('com.google.code.gson:gson:2.10.1')
+    implementation('com.googlecode.json-simple:json-simple:1.1.1')
 }
 
 test {
