--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+    // implementation files('lib/gson-2.10.1.jar')
 }
 
 test {
